[package]
name = "bevy_fps_controller"
version = "0.3.0"
edition = "2021"
authors = ["bevy_fps_controller"]
repository = "https://github.com/qhdwight/bevy_fps_controller"
categories = ["game-engines"]
license = "MIT OR Apache-2.0"
readme = "README.md"
description = "Bevy plugin that adds a Source engine inspired FPS movement controller"

[dependencies]
bevy = { version = "0.14.2", default-features = false, features = [
    "bevy_asset",
    "bevy_winit",
    "bevy_render",
    "x11",
    "bevy_ui",
    "bevy_text",
    "bevy_core_pipeline",
    "bevy_sprite",
    "bevy_gltf",
    "bevy_scene",
    "bevy_pbr",
    "png",
    "tonemapping_luts",
    "ktx2",
    "zstd",
    "multi_threaded",
] }
bevy_rapier3d = { version = "0.27.0", features = [ "simd-stable", "parallel" ] }

[[example]]
name = "minimal"
path = "examples/minimal.rs"
